--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "project-name",
-  "description": "This is a start project",
+  "name": "AztecaKitchen&Bakery",
+  "description": "Phase 1 of the Azteca site",
   "version": "1.0.0",
   "author": "Jason Geiger <hello@130public.net>",
   "bugs": {
