--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "description": "Phase 1 of the Azteca site",
   "version": "1.0.0",
   "author": "Jason Geiger <hello@130public.net>",
-  "bugs": {
-    "url": ""
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jasonjgeiger/azteca.git"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
@@ -14,56 +15,24 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "classnames": "^2.2.6",
-    "dotenv": "^7.0.0",
-    "envfile": "^3.1.0",
     "gatsby": "^2.20.18",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-react-helmet": "^3.2.2",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-sharp": "^2.5.4",
-    "gatsby-plugin-styled-components": "^3.2.1",
     "gatsby-source-filesystem": "^2.2.2",
     "node-sass": "^4.13.1",
-    "prop-types": "^15.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.0",
-    "react-markdown": "^4.3.1",
-    "rebass": "^3.2.2",
-    "styled-components": "^4.4.1"
+    "rebass": "^3.2.2"
   },
-  "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "chalk": "^2.4.1",
-    "contentful-import": "^7.7.7",
-    "eslint": "^5.6.1",
-    "eslint-plugin-react": "^7.19.0",
-    "gh-pages": "^2.2.0",
-    "inquirer": "^6.5.2",
-    "prettier": "^1.19.1",
-    "rimraf": "^2.7.1",
-    "yargs-parser": "^11.0.0"
-  },
-  "homepage": "",
-  "keywords": [
-    "gatsby",
-    "contentful"
-  ],
-  "license": "MIT",
-  "main": "n/a",
   "repository": {
     "type": "git",
     "url": ""
   },
   "scripts": {
     "dev": "gatsby develop",
-    "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md' 'bin/*.js'",
-    "build": "gatsby build",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
-    "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix *.js bin/*.js",
-    "cleanup-repository": "rimraf bin contentful && yarn remove contentful-import chalk inquirer rimraf "
+    "build": "gatsby build"
   }
 }
