--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Jason Geiger <hello@130public.net>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jasonjgeiger/azteca.git"
+    "url": ""
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
@@ -25,11 +25,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.0",
-    "rebass": "^3.2.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": ""
+    "rebass": "^3.2.2",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "dev": "gatsby develop",
