--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "eslint": "^6.8.0",
     "gatsby": "^2.20.18",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-react-helmet": "^3.2.2",
@@ -31,5 +32,8 @@
   "scripts": {
     "dev": "gatsby develop",
     "build": "gatsby build"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0"
   }
 }
