--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.0",
+    "react-structured-data": "0.0.14",
     "rebass": "^3.2.2",
     "styled-components": "^5.1.0"
   },
