--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-source-filesystem": "^2.2.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.0",
     "react-structured-data": "0.0.14",
